# NETAI-Predictive-Analytics-Forecasting

./: .gitignore  Dockerfile  LICENSE  README.md  alerting.py  data_gen.py  docker-compose.yml  forecaster_baseline.py  forecaster_dl.py  pyproject.toml  requirements.txt  setup.py
configs/: default_config.yaml
data/: synthetic_network_telemetry.csv
k8s/: configmap.yaml  deployment.yaml  gpu-training-job.yaml  namespace.yaml  pvc.yaml  service.yaml
netai_forecast/: __init__.py
netai_forecast/api/: __init__.py  app.py
netai_forecast/data/: __init__.py  generator.py  perfsonar_loader.py  preprocessing.py
netai_forecast/early_warning/: __init__.py  alerting.py  detector.py
netai_forecast/evaluation/: __init__.py  metrics.py
netai_forecast/incident_report/: __init__.py  report_generator.py
netai_forecast/models/: __init__.py  arima_model.py  base.py  ensemble.py  few_shot.py  lstm_model.py  prophet_model.py  transformer_model.py
outputs/: incident_reports.csv  incident_reports_lstm_t35.csv  incident_reports_lstm_t80.csv  incident_reports_prophet_t35.csv  lstm_backtest.csv  lstm_forecast_24h.csv  prophet_backtest.csv  prophet_forecast_24h.csv
scripts/: evaluate.py  train.py
tests/: test_api.py  test_data.py  test_early_warning.py  test_evaluation.py  test_incident_report.py  test_models.py
